<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:paddingTop="15dip"
	android:background="#ffffffff"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:singleLine="true"
        android:textColor="#ff333333"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/auto_update_titlebar"/>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="3dip"
        android:layout_marginBottom="10dip"
        android:background="#ffaaaaaa"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:paddingLeft="10dip"
    	android:paddingRight="10dip"
    	android:paddingBottom="5dip"
        android:orientation="vertical">
        <TextView 
	        android:id="@+id/title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#ff555555"
	        android:singleLine="true"
	        android:textSize="16sp"
	        android:text="@string/auto_update_title"/>
        <TextView 
	        android:id="@+id/current"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dip"
	        android:textColor="#ff555555"
	        android:singleLine="true"
	        android:textSize="12sp"
	        android:text="@string/auto_update_current"/>
	    <TextView 
	        android:id="@+id/notes"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="7dip"
	        android:layout_marginLeft="10dip"
	        android:visibility="gone"
	        android:textColor="#ff888888"
	        android:textSize="14sp"
	        android:text="@string/auto_update_notes"/>
	    <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
		    <TextView 
		        android:id="@+id/confirm"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dip"
		        android:textColor="#ffaaaaaa"
		        android:textSize="14sp"
		        android:text="@string/auto_update_confirm"/>
		    <ProgressBar   
		        android:id="@+id/progressBar"   
		        style="?android:attr/progressBarStyleHorizontal"    
		        android:layout_width="fill_parent"   
		        android:layout_height="wrap_content"  
		        android:layout_marginTop="5dip"
		        android:visibility="gone" />  
	    </RelativeLayout>
    </LinearLayout>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
		android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:background="#ffeeeeee">
        <LinearLayout 
            android:id="@+id/first_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
			<Button 
			    android:id="@+id/update"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:layout_marginRight="20dip"
			    android:paddingLeft="20dip"
			    android:paddingRight="20dip"
			    android:singleLine="true"
			    android:text="@string/auto_update_ok"/>
			<Button 
			    android:id="@+id/dismiss"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:layout_marginLeft="20dip"
			    android:paddingLeft="20dip"
			    android:paddingRight="20dip"
			    android:singleLine="true"
			    android:text="@string/auto_update_no"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/second_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center">
            <Button 
			    android:id="@+id/cancel"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:paddingLeft="20dip"
			    android:paddingRight="20dip"
			    android:singleLine="true"
			    android:text="@string/auto_update_cancel"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
